Fix alignment of delete button

--- a/todos/assets/css/todomvc-app.css
+++ b/todos/assets/css/todomvc-app.css
@@ -228,7 +228,7 @@ body {
 	right: 10px;
 	bottom: 0;
 	width: 40px;
-	height: 40px;
+	height: 30px;
 	margin: auto 0;
 	font-size: 30px;
 	color: #cc9a9a;
